Fix navbar brand alignment with fine tuning margin-left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,14 +76,15 @@ body {
 
 /* Aligner le logo de la navbar avec le contenu */
 .navbar > .container-fluid {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: calc(1.5rem + 0.75rem);
+    padding-right: calc(1.5rem + 0.75rem);
 }
 
 .navbar .navbar-brand {
     display: flex;
     align-items: center;
-    margin-left: 0;
+    margin-left: -0.75rem;
+    padding-left: 0;
 }
 
 .navbar .navbar-brand i {
@@ -92,8 +93,23 @@ body {
 
 @media (max-width: 768px) {
     .navbar > .container-fluid {
+        padding-left: calc(1rem + 0.75rem);
+        padding-right: calc(1rem + 0.75rem);
+    }
+    
+    .navbar .navbar-brand {
+        margin-left: -0.75rem;
+    }
+}
+
+@media (max-width: 576px) {
+    .navbar > .container-fluid {
         padding-left: 1rem;
         padding-right: 1rem;
+    }
+    
+    .navbar .navbar-brand {
+        margin-left: 0;
     }
 }
 
